--- a/Field-Oriented-Differential-Drive-Example/build.gradle
+++ b/Field-Oriented-Differential-Drive-Example/build.gradle
@@ -52,6 +52,8 @@ def includeDesktopSupport = false
 dependencies {
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
+    implementation group: 'junit', name: 'junit', version: '4.13.1'
+    implementation group: 'org.dyn4j', name: 'dyn4j', version: '5.0.2'
 
     roborioDebug wpi.java.deps.wpilibJniDebug(wpi.platforms.roborio)
     roborioDebug wpi.java.vendor.jniDebug(wpi.platforms.roborio)
